# InfoprojectRust

./: Cargo.toml
src/: main.rs
src/channel_dispatcher/: mod.rs
src/host/: host_server.rs  mod.rs
src/message/: mod.rs
src/player/: mod.rs
src/server_event_bus/: mod.rs
static/: Camera.js  Chest.js  DOCS.md  Door.js  EventBus.js  GameObject.js  GameSceneFactory.js  Player.js  Scene.js  SceneSwitcher.js  Wall.js  WebsocketGameObject.js  game.js  index.html  tree.js  zombie.js
static/GUI_elements/: Button.js  CreateGameMenu.js  Dropdown.js  EquippedInventory.js  Inventory.js  InventorySlot.js  TextInput.js
static/images/: GameMap.txt  ImageLoader.js  TileMap.js
static/images/TileMaps/: aasdfcyvxcvy.txt  adfadsfasdfxccvbyvcxyc.txt  adfasdfasdf.txt  adfcvyxcvy.txt  adfssafaxbxcvb.txt  adfsxcvxvbxc.txt  adsfasdfsafd.txt  adsfaxbbxcvbxcvbx.txt  adsfbvxcvbxcv.txt  adsfbvxcxcvbxcvxcv.txt  aedfbxvbxcvb.txt  afbxcvbxcvbx.txt  afbxcvbxcvbxcvbxcvbx.txt  afdasdfasd.txt  afsdbxcvbxcvb.txt  afxbvxcvbxcvb.txt  aqezhhhhhh.txt  arhaerh.txt  asdcvxvcbqgs1q3.txt  asdfabxcvbxcvbx.txt  asdfasdfafdasf.txt  asdfasdfaghsdfgsg.txt  asdfasdfasdf.txt  asdfasdfasdfa.txt  asdfasdfasdfasf.txt  asdfasdfaxcvbxcvb.txt  asdfasdfxcvbxcvb.txt  asdfasdxbvcxbxc.txt  asdfasdxcvvbxcvbx.txt  asdfasxbvxcvbx.txt  asdfasxcbvbvxcbxbvxc.txt  asdfasxcbvxvbcxcvb.txt  asdfaxbcvbxcvbx.txt  asdfaxvbxcvbxcvbxc.txt  asdfaxvbxcvbxcvbxv.txt  asdfbvxcbcxybxbxcvbxvb.txt  asdfbvxcvbxcb.txt  asdfbvxcvbxcvbx.txt  asdfbxcvbxcvb.txt  asdfbxcvbxcvbx.txt  (+123 more)
