[package]
name = "InfoProjectRust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-broker = "0.4"
actix-codec = "0.5"
actix-cors = "0.7"
actix-files = "0.6"
actix-http = "3.5"
actix-identity = "0.7"
actix-multipart = "0.7"
actix-protobuf = "0.11"
actix-session = "0.10"
actix-test = "0.1"
actix-tls = "3.4"
actix-utils = "3"
actix-web = "4.9"
actix-web-actors = "4.1"
actix-web-lab = "0.22"
actix-ws = "0.3"
actix-rt = "2.5"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
